[package]
name = "upbit-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"]}
uuid = { version = "0.8", features = ["serde", "v4"]}
jsonwebtoken = "8.0.1"
chrono = "0.4.19"
urlencoding = "2.1.0"
sha2 = { version = "0.10.2"}
hex = "0.4.3"